--- a/src/Styles/About.scss
+++ b/src/Styles/About.scss
@@ -14,4 +14,10 @@
     a {
         font-size: inherit;
     }
+
+    .icon {
+        position: absolute;
+        bottom: 20%;
+        right: 50%;
+    }
 }
