--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,8 @@
 @import './Styles/About.scss';
 @import './Styles/Header.scss';
 @import './Styles/Footer.scss';
+@import './Styles/SectionOne.scss';
+@import './Styles/SectionTwo.scss';
 
 body {
   margin: 0;
