--- a/src/index.scss
+++ b/src/index.scss
@@ -6,9 +6,20 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: rgb(233, 233, 233);
+  background-color: #e9e9e9;
 }
 
-section {
+section, footer {
   padding: 4rem 0rem;
+  padding-right: 60px;
+  padding-left: 60px;
+
+  @media only screen and (max-width: 425px) {
+    padding-left: 1.6rem;
+    padding-right: 1.6rem;
+
+    .mantine-Container-root {
+        padding: 0px;
+    }
+  }
 }
