--- a/src/Styles/Header.scss
+++ b/src/Styles/Header.scss
@@ -5,6 +5,7 @@ header {
     .content-desktop {
         justify-content: space-between;
         display: flex;
+        align-items: center;
     }
 
     .content-mobile {
