About page overhaul and some adjustments

--- a/src/Styles/About.scss
+++ b/src/Styles/About.scss
@@ -5,33 +5,40 @@
     align-items: center;
     padding-top: 0px;
 
-    .title {
-        font-family: 'Montserrat', sans-serif;
-        color: rgb(45, 45, 45);
-        font-size: 7vmin;
-        letter-spacing: 2px;
-        font-weight: 800;
-        margin-top: 0px;
-    }
-
-    a {
-        font-size: inherit;
-    }
-
-    img {
-        object-fit: contain !important;
-        width: 100% !important;
-        height: 255px !important;
-    }
-
-    @media only screen and (max-width: 768px) {
-        .mantine-RingProgress-root {
-            width: auto !important;
-            height: auto !important;
+    .about-content {
+        text-align: center;
+        background-color: rgba(#fff4d5, 0.60);
+        padding: 160px 120px;
+        border-radius: 25px;
+        
+        .title {
+            font-family: 'Montserrat', sans-serif;
+            color: rgb(45, 45, 45);
+            font-size: 7vmin;
+            letter-spacing: 2px;
+            font-weight: 00;
+            margin-top: 0px;
         }
 
-        .center-mobile {
-            text-align: center;
+        .buttons {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            gap: 10px;
+        }
+        
+        a { color: #fd7e14; }
+
+        @media only screen and (max-width: 1086px) {
+            padding: 110px 120px;
+        }
+
+        @media only screen and (max-width: 768px) {
+            padding: 120px 40px;
+        }
+
+        @media only screen and (max-width: 350px) {
+            padding: 80px 20px;
         }
     }
 
